--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,22 @@
 <html>
+    <head>
+        <title>Article-One</title>
+    </head>
+    <body>
+        <div>
+            <a href="/" >Home</a>
+            <h3>Article One</h3>
+            <hr/>
+            <p>
+                Hello World!! Hello World!! Hello World!! Hello World!!Hello World!!Hello World!!Hello World!!
+            </p>
+            <p>
+                Hello World!! Hello World!! Hello World!! Hello World!!Hello World!!Hello World!!Hello World!!
+            </p>
+            <p>
+                Hello World!! Hello World!! Hello World!! Hello World!!Hello World!!Hello World!!Hello World!!
+            </p>
+        </div>
+    </body>
 
 </html>
