--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,11 +5,13 @@
         <style>
             .div1
             {
-                font-family:sans-serif;
-                display:block;
-                max-width:800px;
-                margin:auto;
-                padding-top:40px;
+                   font-family: sans-serif;
+        display: block;
+        max-width: 800px;
+        margin: auto;
+        padding-top: 40px;
+        padding-left: 20px;
+        padding-right: 20px;
             }
             
         
