--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,6 +6,7 @@
             .div1
             {
                    font-family: sans-serif;
+                   color:#4a4a4a;
         display: block;
         max-width: 800px;
         margin: auto;
