--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,13 +2,17 @@
     <head>
         <title>Article-Two</title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <style>
+          
+        </style>
     </head>
     <body>
-        <div>
+        <div class="div1">
             <a href="/" >Home</a>
             <h3>Article Two</h3>
             <hr/>
-            <p>
+            <div>
+                <p>
                 Hello World!! Hello World!! Hello World!! Hello World!!Hello World!!Hello World!!Hello World!!
             </p>
             <p>
@@ -17,6 +21,8 @@
             <p>
                 Hello World!! Hello World!! Hello World!! Hello World!!Hello World!!Hello World!!Hello World!!
             </p>
+            </div>
+            
         </div>
     </body>
 
