[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,19 @@
             <img src="lavi.jpg" alt="It's me!" class="img-medium"/>
         </div>
         <br>
+        <hr/>
+        <h3>
+            Personal!
+        </h3>
         <div class="center text-big bold">
             Hi! I am Lavina!.
         </div>
+         <h3>
+            Professional!
+        </h3>
+        <p>
+            I am at CSPIT
+        </p>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
