[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,10 @@
         <p>
             I am at CSPIT
         </p>
+        <div class="footer">
+            This Button <button id="counter">Click Me!</button> hs been clicked <span id="count=0">
+            </span>  times.
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
