--- a/ui/index.html
+++ b/ui/index.html
@@ -23,6 +23,12 @@
         </p>
         <div class="footer">
             This Button <button id="counter">Click Me!</button> hs been clicked <span id="count">0</span>  times.
+            <br>
+            <hr/>
+            <input type="text" placeholder="name" id="name">
+            <input type="submit" name="submit" value="SUBMIT" id="submit">
+            <ul id="namelist">
+            </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
